# OTUS_space_battle

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
src/: BurnFuelCommandTest.cpp  CheckFuelCommandTest.cpp  IMovable.h  IRotatable.h  IoCContainer.h  IoCTest.cpp  MacroCommandTest.cpp  RotateVelocityCommandTest.cpp  SpaceBattleTest.cpp  SpaceShip.cpp  SpaceShip.h
